# qsi-sd-canonical

./: README.md  pyproject.toml  sd01.ipynb
canonical-examples/: A18-01-v.ttl  A18-02-i.ttl
validators/: addr.shacl.ttl  qsi-over.shapes.ttl
