[tool.poetry]
name = "qli-sd-canonical"
version = "0.1.0"
description = ""
authors = ["Nicholas Car <nick@kurrawong.net>"]

[tool.poetry.dependencies]
python = "^3.9"
rdflib = "^6.1.1"
jupyter = "^1.0.0"
pyshacl = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
